Testing Symlink Edit

--- a/system_config/.tmux.conf
+++ b/system_config/.tmux.conf
@@ -2,7 +2,7 @@
 set-option -g prefix C-a
 unbind-key C-a
 bind-key C-a send-prefix
-
+#test
 #Switch panes with alt and arrows
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
